# perspective

./: .appveyor.yml  .artifactignore  .clang-format  .clang-tidy  .clangd  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  .prettierrc.json  .rustfmt.toml  .travis.yml  0001-Fixed-Typos-in-docs-md-python-and-js-html.patch  02d70ed9b8975aee.module.wasm  07c28ec7aafb1e30.js  0cf928a041a05e34.module.wasm  0e517c02302c9633.wasm  1266bd011b6a7728.wasm  164dea9f71e6d689.wasm  195355a91b39a07c.js  273e5f5191965ab7.wasm  2b67a251143a94aa.wasm  2be0aca7398702a8.module.wasm  30fcd27ece0d6c04.module.wasm  3d1f100a500dd595.wasm  3dfa8e7d27de05e7.module.wasm  404.html  416f4226c670f936.module.wasm  49f4181d9df75ae5.wasm  56dc5db8195d49d1.module.wasm  5c66960aad4dbb68.js  5ca061d2efa2a53c.module.wasm  614ea9ef03fda477.wasm  6183bfc57a5dd00d.wasm  6190a90c89e60bd9.wasm  66df4d75d5acb3f8.wasm  6ba0941cd59572b0.wasm  (+66 more)
bindings/python/: .bettercodehub.yml  .travis.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
bindings/python/docs/: advanced.rst  conf.py  index.rst  make.bat
bindings/python/examples/: psp.ipynb  ws.ipynb
bindings/python/perspective/: __init__.py  _config.py  _layout.py  _schema.py  _type.py  aggregate.py  examples.py  psp.py  sort.py  table.py  view.py  widget.py
cmake/arrow/: CMakeLists.txt  config.h
cmake/date/: CMakeLists.txt
cpp/perspective/: CMakeLists.txt  MANIFEST.in  build.js  env.js  package.json
cpp/perspective/patches/: arrow_strptime.patch  boguspatch.patch  fix_arrow_libtool.patch
cpp/perspective/test/: CMakeLists.txt
cpp/protos/: CMakeLists.txt  perspective.proto
examples/rust-axum/: Cargo.toml  package.json
examples/rust-axum/src/: index.html  main.rs
protos/: CMakeLists.txt  perspective.proto
python/perspective/: .bumpversion.cfg  .clangd  .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  __init__.py  add.py  finos-perspective-jupyterlab.json  package.json  pyproject.toml  requirements-38.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  tmp.py  webpack.config.js  widget.html
python/perspective/bench/: __init__.py  bench.py  benchmark.html  giltest.py  perspective_benchmark.py  run_perspective_benchmark.py
python/perspective/ci-requirements/: requirements-310.txt  requirements-311.txt  requirements-37.txt  requirements-38.txt  requirements-39.txt
python/perspective/docs/: Makefile  advanced.rst  conf.py  generate.py  index.rst  installation.rst  make.bat  perspective-python.rst  perspective.core.rst  perspective.table.rst  quickstart.rst
python/perspective/examples/: FTSE100.csv  FTSE100.pkl  arrow.ipynb  canary.ipynb  client_server_edits.html  client_server_edits.py  filters.ipynb  pandas.ipynb  perspective_manager_lock.html  perspective_manager_lock.py  perspective_tornado_client.html  perspective_tornado_server.py  plugins.ipynb  remote.html  remote.py  streaming.html  streaming.py  table_tutorial.ipynb  widget_tutorial.ipynb
python/perspective/extension/: finos-perspective-jupyterlab.json  finos-perspective-nbextension.json
python/perspective/handlers/: aiohttp.html  starlette.html  tornado.html
python/perspective/js/: server.js
python/perspective/jupyter/: babel.config.js  package.json  webpack.config.js
python/perspective/perspective/: __init__.py  base.py  computed.py  exception.py  libpsp.py  psp.py  schema.py  validate.py  view.py  web.py  widget.py
python/perspective/requirements/: requirements-311.txt  requirements-312.txt  requirements-37.txt  requirements-38.txt  requirements-39.txt
python/perspective/scripts/: build_sdist.sh  test_wheels.sh  write_version.py
python/perspective/src/: binding.cpp  numpy.cpp  python.cpp
python/perspective/table/: __init__.py
python/perspective/tests/: test_column.py  test_gnode.py  test_schema.py  test_table.py
rust/bootstrap-runtime/: Cargo.toml  lib.rs
rust/bundle/: Cargo.toml  build.rs  main.rs
rust/exprtk-rs/: Cargo.toml  build.rs
rust/exprtk-rs/src/: lib.rs
rust/generate-metadata/: Cargo.toml  build.mjs  main.rs  package.json
rust/perspective/: Cargo.toml  build.mjs  build.rs  package.json
rust/perspective-client/: Cargo.toml  build.rs  package.json  perspective.proto
rust/perspective-client/docs/: client.md  expressions.md  index.html  table.md  view.md
rust/perspective-js/: Cargo.toml  README.md  build.js  build.mjs  build.rs  clean.mjs  docs.mjs  package.json  tsconfig.browser.json  tsconfig.json  tsconfig.node.json
rust/perspective-js/docs/: index.html  javascript.md
rust/perspective-python/: Cargo.toml  README.md  build.mjs  build.rs  clean.mjs  copy-data.mjs  docs.mjs  package.json  pyproject.toml  requirements-pyodide.txt  requirements.txt  test.mjs
rust/perspective-python/docs/: index.html  lib.md
rust/perspective-server/: Cargo.toml  build.mjs  build.rs  package.json
rust/perspective-vieux/: Cargo.toml  babel.config.js  package.json  rollup.config.js
rust/perspective-viewer/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.js  build.mjs  build.rs  clean.mjs  concat-md.js  docs.js  docs.mjs  exprtk.md  index.d.ts  package.json  rollup.config.js  rust-toolchain.toml  rustfmt.toml  tsconfig.json  webpack.config.js  webpack.inline.config.js
scripts/: CMakeLists.txt  _js_for_dist.js  _pull_pipeline_artifact.js  _requires_python.js  _test_wheel_python.js  _wheel_python.js  bench.js  build.js  build_cpp.js  build_js.js  build_python.js  build_python_azure.js  build_python_node.js  build_python_table.js  build_rust.js  ci_python.js  clean.js  compile.js  docs.js  fix_cpp.js  generate_test_data.mjs  install_emsdk.js  install_python.js  install_tools.js  jlab_link.js  lint_cpp.js  lint_python.js  lint_python_node.js  lint_python_table.js  lint_rust.js  nb_link.js  publish.js  publish_js.js  publish_python.js  publish_python_azure.js  repl.js  run_emsdk.js  script_utils.js  setup.js  sh.js  (+12 more)
scripts/webpack/: babel.config.js  common.config.js  webpack-plugin.js
(+3722 files in other folders)
